test/types/range/hilde/byTypeError2.chpl
var i16 = 10:int(16);  writeln(typeToString((1:int(8).. by i16).type));
var i32 = 10:int(32);  writeln(typeToString((1:int(8).. by i32).type));
var u16 = 10:uint(16); writeln(typeToString((1:int(8).. by u16).type));
var u32 = 10:uint(32); writeln(typeToString((1:int(8).. by u32).type));
                       writeln(typeToString((1:int(16).. by i32).type));
                       writeln(typeToString((1:int(16).. by u32).type));
                       writeln(typeToString((1:uint(8).. by i16).type));
                       writeln(typeToString((1:uint(8).. by i32).type));
                       writeln(typeToString((1:uint(8).. by u16).type));
                       writeln(typeToString((1:uint(8).. by u32).type));
                       writeln(typeToString((1:uint(16).. by i32).type));
                       writeln(typeToString((1:uint(16).. by u32).type));
